# renamer

./: .gitignore  README.md  renamer.cabal
lib/: Renamer.hs
src/: Main.hs
test/: RenamerSpec.hs
