name:                renamer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shterrett/renamer#readme
license:             MIT
license-file:        LICENSE
author:              Stuart Terrett
maintainer:          shterrett@gmail.com
copyright:           2017 Stuart Terrett
category:            Command Line
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable renamer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , renamer
library
  Exposed-modules:     Renamer
  default-language:    Haskell2010
  hs-source-dirs:      lib
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , Glob

test-suite spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , renamer
                     , hspec
